--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="/index.css">
   <title>React App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <!-- Like below. This is the script tag for bootstrapping your Vite application -->
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
