--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="/index.css">
-  <title>React App</title>
+  <title>SHAHID UL ISLAM :Developer Portfolio</title>
 </head>
 
 <body>
