--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./src/assets/css/custom.css">
   <title>SHAHID UL ISLAM :Developer Portfolio</title>
 </head>
 
-<body>
+<body class="background">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- Like below. This is the script tag for bootstrapping your Vite application -->
